--- a/public/style/calendar-style.css
+++ b/public/style/calendar-style.css
@@ -92,14 +92,14 @@ body {
     justify-content: center;
     height: 100%;
     text-align: center;
+    border-radius: 0 6px 0 0;
 }
 
 .header-day {
     text-align: center;
     font-weight: 500;
     font-size: 1em;
-    border: 1px solid #222;
-    border-bottom: 2px solid #222;
+    border: 1px solid #ffffff;
     background: #222;
     color: #fff;
     padding: 6px 2px 2px 2px;
@@ -109,6 +109,7 @@ body {
 .header-day.today {
     color: #000000;
     background: #ffffff;
+    border: 1px solid #000000;
 }
 
 .header-date {
@@ -155,7 +156,7 @@ body {
 }
 
 .day.today {
-    border: 2px solid #222;
+    border: 1px solid #222;
     background: #f3f3f3;
 }
 
