--- a/public/style/week-calendar-style.css
+++ b/public/style/week-calendar-style.css
@@ -88,7 +88,7 @@ body {
     top: 0;
     border-radius: 6px 6px 0 0;
     position: sticky;
-    z-index: 10;
+    z-index: 2;
     box-sizing: border-box;
 }
 
@@ -166,5 +166,5 @@ body {
 .day.today {
     border-left: 2px solid #222;
     border-right: 2px solid #222;
-    background: #ffffff;
+    background: #c9c9c9;
 }
