--- a/assets/css/lateral-menu-style.css
+++ b/assets/css/lateral-menu-style.css
@@ -6,6 +6,7 @@
     top: 0;
     right: 0;
     background: #222;
+    border-left: 1px solid #fff;
     overflow-x: hidden;
     transition: width 1.5s cubic-bezier(0.77,0,0.18,1);
     padding-top: 60px;
@@ -52,8 +53,4 @@
 
 .calendar-menu-btn-container, .openbtn {
     display: none !important;
-}
-
-@media (max-width: 600px) {
-    .sidebar { padding-top: 40px; }
 }
