--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body::before {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url('../image/background-image.jpg');
+    background-image: url('../images/background-image.jpg');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
