--- a/assets/css/popup-styles.css
+++ b/assets/css/popup-styles.css
@@ -1017,6 +1017,7 @@
 
 .price-col {
     width: 100px;
+    text-align: center;
 }
 
 .duration-col {
@@ -1094,7 +1095,7 @@
 }
 
 .price-input {
-    text-align: right;
+    text-align: center;
 }
 
 .duration-input {
