--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -1026,7 +1026,21 @@
 
 .start-time-col,
 .end-time-col {
-    width: 100px;
+    width: 140px;
+}
+
+/* Schedules table specific row height */
+.schedules-table-container .excel-table td {
+    padding: 0.5rem 0.375rem;
+    height: 60px;
+}
+
+/* Schedules select for closure days - larger and better */
+.schedules-table-container .closure-days-select {
+    height: 50px;
+    font-size: 0.85rem;
+    padding: 0.4rem 0.375rem;
+    line-height: 1.4;
 }
 
 .name-col {
@@ -1336,6 +1350,19 @@ input[type="checkbox"] {
     .start-time-col,
     .end-time-col {
         width: 70px;
+    }
+    
+    /* Schedules table responsive row height */
+    .schedules-table-container .excel-table td {
+        padding: 0.5rem 0.25rem;
+        height: 55px;
+    }
+    
+    /* Schedules select responsive */
+    .schedules-table-container .closure-days-select {
+        height: 45px;
+        font-size: 0.8rem;
+        padding: 0.3rem 0.25rem;
     }
 }
 
